# ReverseSock5Proxy

./: .gitignore  README.md
.github/: FUNDING.yml
Sock5Server/: CMakeLists.txt  CMakePresets.json  conanfile.txt  dpi-aware.manifest  info.rc
Sock5Server/scripts/: Generate_Build_GCC - Debug.bat  Generate_Build_GCC - Release.bat  Generate_Build_MSVC - Debug.bat  Generate_Build_MSVC - Release.bat
Sock5Server/src/: SOCK5Server.cpp  SOCK5Server.h
Sock5Server/src/UI/: GUI_backend.cpp  GUI_backend.h
Sock5Server/src/UI/Font/: roboto-regular.h
Sock5Server/src/UI/include/: Application.h  ConfigIni.h  Texture.h
Sock5Server/src/UI/include/Sock5/: Sock5RServer.h
Sock5Server/src/UI/src/: Application.cpp  ConfigIni.cpp  Texture.cpp
Sock5Server/src/UI/src/Sock5/: Sock5RServer.cpp
Sock5Server/src/bindings/mINI/src/mini/: ini.h
Socks5Agent/: CMakeLists.txt  main.c
